// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range should render correctly 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      5 (max)
    </div>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-12.799999999999997px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with input change 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      20 (max)
    </div>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-uxqlbg-StyledCursorLink {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-uxqlbg-StyledCursorLink e1tqrz512"
      style="width: -12px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-8px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max 2`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      20 (max)
    </div>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max and out of range value 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-uxqlbg-StyledCursorLink {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-uxqlbg-StyledCursorLink e1tqrz512"
      style="width: -60px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-56px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-1"
        value="30"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max and out of range value 2`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      10 (max)
    </div>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-56px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="15"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with one value 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      5 (max)
    </div>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-32px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with props 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1960p6x-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 120px;
}

.cache-l72sq5-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 128px;
  left: 8px;
}

.cache-l72sq5-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-l72sq5-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1wrneui-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 128px;
  right: 8px;
}

.cache-1wrneui-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wrneui-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-hsj0l5-StyledCursorLink {
  position: absolute;
  top: 120px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1tr91s7-StyledCursor {
  position: absolute;
  top: 114px;
  height: 16px;
  width: 45px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-1960p6x-StyledBar e1tqrz514"
    />
    <div
      class="cache-l72sq5-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1wrneui-StyledLimit e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-hsj0l5-StyledCursorLink e1tqrz512"
      style="width: -225px; transform: translate3d(45px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1tr91s7-StyledCursor"
      style="transform: translate3d(25px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1tr91s7-StyledCursor"
      style="transform: translate3d(-200px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="test-1"
        value="30"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with two values 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-uxqlbg-StyledCursorLink {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      5 (max)
    </div>
    <div
      class="cache-uxqlbg-StyledCursorLink e1tqrz512"
      style="width: -48px; transform: translate3d(-24px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-32px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-80px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="rangeInput-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with two values input change 1`] = `
<DocumentFragment>
  .cache-13wb1lf-StyledContainer {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-17hjtlc-StyledBar {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-18xko86-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-18xko86-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-18xko86-StyledLimit::before {
  left: 16px;
  right: unset;
}

.cache-1mi3jwc-StyledLimit {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1mi3jwc-StyledLimit::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1mi3jwc-StyledLimit::before {
  right: 16px;
  left: unset;
}

.cache-uxqlbg-StyledCursorLink {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1vbaefx-StyledCursor {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-jnxzz1-StyledInput {
  position: absolute;
  color: #4a4f62;
  background-color: #ffffff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-13wb1lf-StyledContainer"
  >
    <div
      class="cache-17hjtlc-StyledBar e1tqrz514"
    />
    <div
      class="cache-18xko86-StyledLimit e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-1mi3jwc-StyledLimit e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-uxqlbg-StyledCursorLink e1tqrz512"
      style="width: -12px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1vbaefx-StyledCursor"
      style="transform: translate3d(-8px, 0, 0);"
    >
      <input
        class="cache-jnxzz1-StyledInput e1tqrz510"
        name="test-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;
